--- a/treeapp_data.json
+++ b/treeapp_data.json
@@ -128,7 +128,7 @@
       "explanation": "Nodo creado para probar la funcionalidad",
       "code": "print('Hola TreeApp!')",
       "status": "",
-      "parent_id": null,
+      "parent_id": "folder_a816e164",
       "children_ids": [],
       "created": "2025-05-29T02:14:14.407004",
       "modified": "2025-05-29T03:50:00.413628",
@@ -143,7 +143,7 @@
       "explanation": "Nodo creado para probar la funcionalidad",
       "code": "print('Hola TreeApp!')",
       "status": "",
-      "parent_id": null,
+      "parent_id": "folder_a816e164",
       "children_ids": [],
       "created": "2025-05-29T02:14:14.583032",
       "modified": "2025-05-29T02:14:14.583060",
@@ -173,7 +173,7 @@
       "explanation": "Nodo creado para probar la funcionalidad",
       "code": "print('Hola TreeApp!')",
       "status": "",
-      "parent_id": null,
+      "parent_id": "folder_a816e164",
       "children_ids": [],
       "created": "2025-05-29T02:14:14.918956",
       "modified": "2025-05-29T02:14:14.918983",
@@ -203,7 +203,7 @@
       "explanation": "Archivo creado desde el explorador",
       "code": "# Contenido del archivo\nprint('Hola TreeApp!')",
       "status": "",
-      "parent_id": null,
+      "parent_id": "folder_a816e164",
       "children_ids": [],
       "created": "2025-05-29T02:23:09.536859",
       "modified": "2025-05-29T02:23:09.536887",
@@ -338,7 +338,7 @@
       "explanation": "Carpeta creada desde el explorador",
       "code": "",
       "status": "",
-      "parent_id": null,
+      "parent_id": "folder_a816e164",
       "children_ids": [],
       "created": "2025-05-29T02:23:52.768320",
       "modified": "2025-05-29T02:23:52.768347",
